Fixed welcome page spacing for all devices, routing fix from welcome page to mainpage w/ activelink state based on location path. Fixed banner info and added more to rotate text.

--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,11 @@ p.danger {
   transform: translate(-50%, -50%); /* Adjust based on the element's size */
   color: #fff;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
 }
 
 .welcomeOverlayCover {
@@ -172,14 +177,70 @@ p.danger {
   opacity: 0.8;
 }
 
+.welcome-text-section {
+  text-align: center; /* Center the text and button inside the div */
+  position: relative;
+}
+
+.technology-stack-icons-section {
+  position: sticky;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 65px;
+  padding-bottom: 20px;
+}
+
+.carousel-slide {
+  justify-content: space-between;
+}
+
+.carousel-item {
+  flex: 0 0 33.333%; /* Do not grow, do not shrink, initial base width */
+  padding: 5px; /* Optional, for some spacing between items */
+}
+
+.carousel-item img {
+  width: 200px; /* Adjust based on your preference */
+  height: 105px;
+  margin: auto; /* Center the image */
+  display: block;
+  object-fit: contain;
+}
+
+/* Larger screens */
+@media (min-width: 768px) {
+  .carousel-item img {
+    width: 250px;
+    height: 150px;
+  }
+}
+
+/* Smaller screens */
+@media (max-width: 480px) {
+  .carousel-item img {
+    width: 75px;
+    height: 75px;
+  }
+}
+
+.welcome-btn {
+  padding-bottom: 2rem;
+}
+
 #welcomePageTagline {
   position: relative;
   padding-top: 6.25rem;
   /* padding-right: 0.5rem; */
   /* padding-left: rem; */
-  padding-bottom: 10rem;
+  padding-bottom: 4rem;
   text-align: center;
   font-size: 3rem;
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  padding: 8px 10px;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 25px;
 }
 
 @media (max-width: 430px) {
@@ -187,8 +248,8 @@ p.danger {
     padding-top: 2rem;
     padding-right: 1.5rem;
     padding-left: 1.5rem;
-    padding-bottom: 11rem;
-    font-size: 2rem; /* Adjusted font size for readability on mobile */
+    padding-bottom: 3.5rem;
+    font-size: 2.5rem; /* Adjusted font size for readability on mobile */
     text-align: center;
   }
 
@@ -206,9 +267,8 @@ p.danger {
 /* Media query for tablets */
 @media (min-width: 768px) {
   #welcomePageTagline {
-    padding-top: 2rem; /* Reduced padding */
     position: relative;
-    padding-left: 2.5rem;
+    /* padding-left: 2.5rem; */
     font-size: 4rem; /* Adjusted font size for readability on mobile */
     text-align: center; /* Optionally center text for mobile */
   }
